set header and footer, add images and content

--- a/index.html
+++ b/index.html
@@ -8,19 +8,21 @@
 <body>
 <div class="header">
   <div class="header_logo">Decoracion e Inmuebles de Guatemala</div>
-  <ul> 
+ <div class="links"> 
+  <ul class="links"> 
     <li class="link_one"><a href="https://telaytapices.com.gt/">Tela Y Tapices</a></li>
     <li class="link_two"><a href="https://www.luxurylivinggt.com/"> Luxury Living Guatemala</a></li>
     <li class="link_three"><a href="https://www.tapicesymas.com/"> Tapices y Mas</a></li>
   </ul>
+ </div>
 </div>
-<div class="Website_info"> 
+<div class="website_info"> 
     <div class="descripcion_sitio">
         <div class="titulo_descripcion"> Decoracion e Inmuebles de Guatemala</div>
         <div class="contenido_descripcion"> Las mejores opciones en telas, tapices, decoraciones del hogar y opciones inmobiliarias.</div>
         <button class="boton" href="https://telaytapices.com.gt/">Llamanos</button>
     </div>
-   <div class="Imagen_principal"> <a href="https://www.luxurylivinggt.com/"><img src="./images/miami.jpg" alt="imagen de los rascacielos de miami"></a> </div>
+   <div class="imagen_principal"> <a href="https://www.luxurylivinggt.com/"><img class="principal" src="./images/miami.jpg" alt="imagen de los rascacielos de miami"></a> </div>
 
 </div>
 
@@ -28,13 +30,13 @@
 <div class="Information_container">
    <div class="Information_title"> Some Random Information</div>
    <div class="Images"> 
-     <img src="./images/telas.jpg" alt="foto de telas coloridos"/> 
+     <img class="imagenes_secundarias" src="./images/telas.jpg" alt="foto de telas coloridos"/> 
      <div class="descripcion"> Las Mejores telas Europeas al mejor precio</div>
-     <img src="./images/tapices.jpg" alt="foto de sala con un bello papel tapiz"/>
+     <img class="imagenes_secundarias" src="./images/tapices.jpg" alt="foto de sala con un bello papel tapiz"/>
      <div class="descripcion">Variados tapices para todas las areas de tu casa o tu oficina!</div>
-     <img src="./images/missoni.jpg" alt="bella propiedad en miami con vista a la bahia"/>
+     <img class="imagenes_secundarias" src="./images/missoni.jpg" alt="bella propiedad en miami con vista a la bahia"/>
      <div class="descripcion"> Propiedades en Miami para que inviertas en tu futuro!</div>
-     <img src="./images/candelas.jpg" alt="velas de olores para casa marca voluspa"/>
+     <img class="imagenes_secundarias" src="./images/candelas.jpg" alt="velas de olores para casa marca voluspa"/>
      <div class="descripcion"> Variedad de Productos para el hogar</div>
    </div>
 </div>
@@ -49,7 +51,7 @@
     </div>
 </div>
 
-<div class="boton_communicacion">
+<div class="contenedor_comunicacion">
  <div class="container"> 
       <div class="titulo_comunicate"> ES MOMENTO DE COMUNICARTE</div>
      <div class="Comunicate"> Comunicate con nosotros para recibir asesoria de nuestros productos y servicios</div>
@@ -61,7 +63,7 @@
 </div>
 
 <div class="footer">
-  <div class="Decoracion e Inmuebles de Guatemala"></div>
+  <div class="footer_title"> Decoracion e Inmubles de Guatemala</div>
   <div class="correo">noemirivas24@yahoo.com</div>
 </div>
 
