correct height size for container

--- a/index.html
+++ b/index.html
@@ -6,38 +6,32 @@
     <link rel="stylesheet" href="./styles.css"/>
 </head>
 <body>
-<div class="header">
-  <div class="header_logo">Decoracion e Inmuebles de Guatemala</div>
- <div class="links"> 
-  <ul class="links"> 
-    <li class="link_one"><a href="https://telaytapices.com.gt/">Tela Y Tapices</a></li>
-    <li class="link_two"><a href="https://www.luxurylivinggt.com/"> Luxury Living Guatemala</a></li>
-    <li class="link_three"><a href="https://www.tapicesymas.com/"> Tapices y Mas</a></li>
-  </ul>
- </div>
-</div>
+
 <div class="website_info"> 
     <div class="descripcion_sitio">
+        <div class="header_logo">Decoracion e Inmuebles de Guatemala</div>
         <div class="titulo_descripcion"> Decoracion e Inmuebles de Guatemala</div>
         <div class="contenido_descripcion"> Las mejores opciones en telas, tapices, decoraciones del hogar y opciones inmobiliarias.</div>
         <button class="boton" href="https://telaytapices.com.gt/">Llamanos</button>
     </div>
-   <div class="imagen_principal"> <a href="https://www.luxurylivinggt.com/"><img class="principal" src="./images/miami.jpg" alt="imagen de los rascacielos de miami"></a> </div>
+   <div class="imagen_principal"> 
+    <ul class="links"> 
+        <li class="link_one"><a href="https://telaytapices.com.gt/">Tela Y Tapices</a></li>
+        <li class="link_two"><a href="https://www.luxurylivinggt.com/"> Luxury Living Guatemala</a></li>
+        <li class="link_three"><a href="https://www.tapicesymas.com/"> Tapices y Mas</a></li>
+      </ul>
+    <a href="https://www.luxurylivinggt.com/"><img class="principal" src="./images/miami.jpg" alt="imagen de los rascacielos de miami"></a> </div>
 
 </div>
 
 
-<div class="Information_container">
-   <div class="Information_title"> Some Random Information</div>
-   <div class="Images"> 
-     <img class="imagenes_secundarias" src="./images/telas.jpg" alt="foto de telas coloridos"/> 
-     <div class="descripcion"> Las Mejores telas Europeas al mejor precio</div>
-     <img class="imagenes_secundarias" src="./images/tapices.jpg" alt="foto de sala con un bello papel tapiz"/>
-     <div class="descripcion">Variados tapices para todas las areas de tu casa o tu oficina!</div>
-     <img class="imagenes_secundarias" src="./images/missoni.jpg" alt="bella propiedad en miami con vista a la bahia"/>
-     <div class="descripcion"> Propiedades en Miami para que inviertas en tu futuro!</div>
-     <img class="imagenes_secundarias" src="./images/candelas.jpg" alt="velas de olores para casa marca voluspa"/>
-     <div class="descripcion"> Variedad de Productos para el hogar</div>
+<div class="information_container">
+   <div class="information_title"> Conoce Nuestras Marcas!</div>
+   <div class="images"> 
+     <div class="descripcion"><img class="imagenes_secundarias" src="./images/telas.jpg" alt="foto de telas coloridos"/>  Las Mejores telas Europeas al mejor precio</div>
+     <div class="descripcion"><img class="imagenes_secundarias" src="./images/tapices.jpg" alt="foto de sala con un bello papel tapiz"/> Tapices para todas las areas de tu casa o tu oficina!</div>
+     <div class="descripcion"><img class="imagenes_secundarias" src="./images/missoni.jpg" alt="bella propiedad en miami con vista a la bahia"/> Propiedades en Miami para que inviertas en tu futuro!</div>
+     <div class="descripcion"><img class="imagenes_secundarias" src="./images/candelas.jpg" alt="velas de olores para casa marca voluspa"/> Variedad de Productos para el hogar</div>
    </div>
 </div>
 
@@ -47,18 +41,21 @@
         Nos enfocamos a mejorar el hogar dando productos decorativos funcionales y de la mejor calidad. Adicionalmente 
         nos enfocamos en vender propiedades en el estado mas prospero de Estados Unidos, haciendo que la rentabiliad de los
         inmuebles sea la mas alta posible. 
-        - Noemi Rivas 
+        <p class="noemi" style="font-size: 26px; font-weight: 900;"> -Noemi Rivas </p> 
     </div>
+    
 </div>
 
 <div class="contenedor_comunicacion">
- <div class="container"> 
+ <div class="azul">
+  <div class="container_comunicacion"> 
       <div class="titulo_comunicate"> ES MOMENTO DE COMUNICARTE</div>
-     <div class="Comunicate"> Comunicate con nosotros para recibir asesoria de nuestros productos y servicios</div>
- </div>
+     <div class="comunicate"> Comunicate con nosotros para recibir asesoria de nuestros productos y servicios</div>
+  </div>
  <div class="contenedor_boton">
     <button class="boton" href="https://telaytapices.com.gt/">Llamanos</button>
  </div>
+</div>
 
 </div>
 
