--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
         <div class="header_logo">Decoracion e Inmuebles de Guatemala</div>
         <div class="titulo_descripcion"> Decoracion e Inmuebles de Guatemala</div>
         <div class="contenido_descripcion"> Las mejores opciones en telas, tapices, decoraciones del hogar y opciones inmobiliarias.</div>
-        <button class="boton" href="https://telaytapices.com.gt/">Llamanos</button>
-    </div>
+        <button class="boton"><a href="https://telaytapices.com.gt/">Llamanos</a></button>    </div>
    <div class="imagen_principal"> 
     <ul class="links"> 
         <li class="link_one"><a href="https://telaytapices.com.gt/">Tela Y Tapices</a></li>
@@ -53,7 +52,7 @@
      <div class="comunicate"> Comunicate con nosotros para recibir asesoria de nuestros productos y servicios</div>
   </div>
  <div class="contenedor_boton">
-    <button class="boton" href="https://telaytapices.com.gt/">Llamanos</button>
+    <button class="boton"><a href="https://telaytapices.com.gt/">Llamanos</a></button>
  </div>
 </div>
 
